--- a/weather/src/main/resources/application.properties
+++ b/weather/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 spring.application.name=app
 
 
-weather.api.url = YOUR-API-URL
+weather.api.url = https://weather.visualcrossing.com/VisualCrossingWebServices/rest/services/timeline/{city}
 weather.api.key = YOUR-API-KEY
+
+# Redis ayarlar?
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+## TTL
+redis.ttl.hours=6
